--- a/examples/supermassive-todomvc/tsconfig.json
+++ b/examples/supermassive-todomvc/tsconfig.json
@@ -3,7 +3,7 @@
   "ts-node": {
     "transpileOnly": true,
     "compilerOptions": {
-      "module": "ESNext",
+      "module": "commonjs",
       "target": "ES5",
       "moduleResolution": "Node"
     },
