--- a/packages/relay-compiler-language-graphitation/package.json
+++ b/packages/relay-compiler-language-graphitation/package.json
@@ -15,7 +15,7 @@
     "just": "monorepo-scripts"
   },
   "dependencies": {
-    "relay-compiler-language-typescript": "^14.0.0",
+    "relay-compiler-language-typescript": ">=14.0.0",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
