--- a/examples/apollo-watch-fragments/package.json
+++ b/examples/apollo-watch-fragments/package.json
@@ -8,8 +8,8 @@
     "@graphitation/graphql-js-tag": "^0.5.3",
     "@graphql-tools/schema": "^8.2.0",
     "graphql": "^15.6.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "beta",
+    "react-dom": "beta"
   },
   "scripts": {
     "start": "yarn generate-resolver-typings && concurrently 'yarn relay --watch' 'yarn serve'",
