--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   "resolutions": {
     "@types/webpack": "^5.28.0",
     "graphql": "^15.6.0",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "react": "18.0.0-beta-24dd07bd2-20211208",
+    "react-dom": "18.0.0-beta-24dd07bd2-20211208"
   }
 }
