--- a/packages/relay-compiler-language-graphitation/package.json
+++ b/packages/relay-compiler-language-graphitation/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "relay-compiler-language-typescript": ">=14.0.0",
-    "typescript": "^4.2.3"
+    "typescript": ">=4.2.3"
   },
   "devDependencies": {
     "@types/jest": "^26.0.22",
