--- a/scripts/package.json
+++ b/scripts/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {
     "jest": "^26.6.3",
-    "typescript": "^4.2.3",
+    "typescript": ">=4.2.3",
     "ts-jest": "^26.5.4",
     "just-scripts": "^1.5.3",
     "ts-node": "^9.1.1",
