--- a/examples/apollo-watch-fragments/package.json
+++ b/examples/apollo-watch-fragments/package.json
@@ -36,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "@graphitation/apollo-react-relay-duct-tape": "^0.7.2",
     "@graphql-codegen/cli": "2.2.0",
     "@graphql-codegen/typescript": "2.2.2",
     "@graphql-codegen/typescript-resolvers": "^2.2.1",
@@ -49,6 +50,7 @@
     "graphql-relay": "^0.10.0",
     "relay-compiler": "^10",
     "relay-compiler-language-graphitation": "^1.0.0-alpha.1",
+    "ts-expect": "^1.3.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.2.1",
     "typescript": "^4.1.2",
