--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -17,7 +17,7 @@
     "test": "monorepo-scripts test",
     "types": "monorepo-scripts types",
     "just": "monorepo-scripts",
-    "benchmark": "ts-node -T -O '{\"module\":\"commonjs\"}' ./src/benchmarks/index.ts"
+    "benchmark": "ts-node -T ./src/benchmarks/index.ts"
   },
   "devDependencies": {
     "@graphitation/graphql-js-tag": "*",
@@ -47,6 +47,6 @@
     "@graphql-tools/schema": "^7.1.5",
     "commander": "^8.3.0",
     "graphql": "^15.6.1",
-    "typescript": "4.4.3"
+    "typescript": "^4.4.3"
   }
 }
