--- a/packages/graphql-js-tag/package.json
+++ b/packages/graphql-js-tag/package.json
@@ -27,6 +27,7 @@
     "types": "./lib/index.d.ts",
     "access": "public",
     "module": "./lib/index.mjs",
+    "sideEffects": false,
     "exports": {
       ".": {
         "import": "./lib/index.mjs",
