--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -27,6 +27,7 @@
     "@types/node-json-db": "^0.9.3",
     "benchmark": "^2.1.4",
     "graphql-jit": "^0.5.1",
+    "iterall": "^1.3.0",
     "monorepo-scripts": "*",
     "node-json-db": "^1.3.0",
     "ts-node": "^10.0.0"
