Fix Webpack 4 compat
Change main format to support webpack 4.

Make default imports for third-party CommonJS dependencies or remove them

--- a/packages/apollo-react-relay-duct-tape/package.json
+++ b/packages/apollo-react-relay-duct-tape/package.json
@@ -41,7 +41,7 @@
   "sideEffects": false,
   "access": "public",
   "publishConfig": {
-    "main": "./lib/index.js",
+    "main": "./lib/index",
     "types": "./lib/index.d.ts",
     "module": "./lib/index.mjs",
     "exports": {
