--- a/packages/apollo-mock-client/package.json
+++ b/packages/apollo-mock-client/package.json
@@ -37,7 +37,7 @@
     "invariant": "^2.2.4"
   },
   "publishConfig": {
-    "main": "./lib/index.js",
+    "main": "./lib/index",
     "types": "./lib/index.d.ts",
     "access": "public",
     "module": "./lib/index.mjs",
