--- a/packages/relay-compiler-language-graphitation/package.json
+++ b/packages/relay-compiler-language-graphitation/package.json
@@ -28,7 +28,7 @@
     "graphql": "^15.0.0"
   },
   "publishConfig": {
-    "main": "./lib/index.js",
+    "main": "./lib/index",
     "types": "./lib/index.d.ts",
     "access": "public",
     "module": "./lib/index.mjs",
