--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@graphitation/graphql-js-tag": "*",
+    "@graphql-tools/schema": "^7.1.5",
     "@ts-morph/bootstrap": "^0.11.0",
     "@types/benchmark": "^2.1.0",
     "@types/jest": "^26.0.22",
@@ -35,7 +36,7 @@
   "sideEffects": false,
   "access": "public",
   "publishConfig": {
-    "main": "./lib/index.js",
+    "main": "./lib/index",
     "types": "./lib/index.d.ts",
     "module": "./lib/index.mjs",
     "exports": {
@@ -46,7 +47,6 @@
     }
   },
   "dependencies": {
-    "@graphql-tools/schema": "^7.1.5",
     "commander": "^8.3.0",
     "graphql": "^15.6.1",
     "typescript": "^4.4.3"
