--- a/packages/ts-transform-graphql-js-tag/package.json
+++ b/packages/ts-transform-graphql-js-tag/package.json
@@ -23,7 +23,7 @@
     "ts-transformer-testing-library": "^1.0.0-alpha.7"
   },
   "publishConfig": {
-    "main": "./lib/index.js",
+    "main": "./lib/index",
     "types": "./lib/index.d.ts",
     "access": "public",
     "module": "./lib/index.mjs",
