--- a/scripts/package.json
+++ b/scripts/package.json
@@ -8,15 +8,17 @@
     "monorepo-scripts": "bin/monorepo-scripts.js"
   },
   "devDependencies": {
-    "jest": "^26.6.3",
-    "typescript": ">=4.2.3",
-    "ts-jest": "^26.5.4",
-    "just-scripts": "^1.5.3",
-    "ts-node": "^9.1.1",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "esbuild": "^0.11.5",
-    "eslint": "^7.23.0",
-    "@typescript-eslint/parser": "^4.21.0",
-    "@typescript-eslint/eslint-plugin": "4.7.0",
-    "fast-glob": "^3.2.5"
+    "eslint": "^8.7.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "fast-glob": "^3.2.5",
+    "jest": "^26.6.3",
+    "just-scripts": "^1.5.3",
+    "ts-jest": "^26.5.4",
+    "ts-node": "^9.1.1",
+    "typescript": ">=4.2.3"
   }
 }
