--- a/packages/graphql-js-tag/package.json
+++ b/packages/graphql-js-tag/package.json
@@ -25,7 +25,7 @@
   "sideEffects": false,
   "access": "public",
   "publishConfig": {
-    "main": "./lib/index.js",
+    "main": "./lib/index",
     "types": "./lib/index.d.ts",
     "module": "./lib/index.mjs",
     "exports": {
