[package] Need to explicitely list exports for non-root-imports

--- a/packages/apollo-react-relay-duct-tape/package.json
+++ b/packages/apollo-react-relay-duct-tape/package.json
@@ -52,6 +52,10 @@
       ".": {
         "import": "./lib/index.mjs",
         "require": "./lib/index.js"
+      },
+      "./lib/storeObservation/createImportDocumentsTransform": {
+        "import": "./lib/storeObservation/createImportDocumentsTransform.mjs",
+        "require": "./lib/storeObservation/createImportDocumentsTransform.js"
       }
     }
   }
