--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "monorepo-scripts build",
     "lint": "monorepo-scripts lint",
-    "test": "supermassive extract-schema ./src/benchmarks/swapi-schema/schema.graphql && monorepo-scripts test",
+    "test": "./bin/supermassive.js extract-schema ./src/benchmarks/swapi-schema/schema.graphql && monorepo-scripts test",
     "types": "monorepo-scripts types",
     "just": "monorepo-scripts",
     "benchmark": "ts-node -T ./src/benchmarks/index.ts"
