[ARRDT] Make TS dep explicit and fix for >= 4.5

--- a/packages/apollo-react-relay-duct-tape/package.json
+++ b/packages/apollo-react-relay-duct-tape/package.json
@@ -40,7 +40,8 @@
   },
   "dependencies": {
     "invariant": "^2.2.4",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "typescript": "^4.5.0"
   },
   "sideEffects": false,
   "access": "public",
