--- a/.azure-devops/graphitation-release.yml
+++ b/.azure-devops/graphitation-release.yml
@@ -21,7 +21,7 @@ jobs:
           git config user.email "gql-svc@microsoft.com"
           git config user.name "Graphitation Service Account"
         displayName: Configure git for release
-      - script: yarn release -y -n $(npmToken) --access public
+      - script: yarn release -y -n $(ossNpmToken) --access public
         displayName: Release
         env:
-          NPM_AUTHTOKEN: $(githubPAT)
+          NPM_AUTHTOKEN: $(ossGithubPAT)
