switching pool to make this run indepent of other teams pools

--- a/.azure-devops/graphitation-release.yml
+++ b/.azure-devops/graphitation-release.yml
@@ -12,7 +12,7 @@ jobs:
     variables:
       - group: "Github and NPM secrets"
     dependsOn: Compliance
-    pool: "1ES-Teams-Ubuntu-TMP"
+    pool: "1ES-Teams-Ubuntu-Latest-Compliant"
     steps:
       - script: yarn
       - script: |
