--- a/.azure-devops/graphitation-release.yml
+++ b/.azure-devops/graphitation-release.yml
@@ -8,21 +8,23 @@ variables:
 
 jobs:
   - template: ./templates/compliance-job.yml
-  - job: Release
-    variables:
-      - group: "Github and NPM secrets"
-    dependsOn: Compliance
-    pool: "1ES-Teams-Ubuntu-Latest-Compliant"
-    steps:
-      - script: yarn
-      - script: |
-          yarn ci
-        displayName: build and test [test]
-      - script: |
-          git config user.email "gql-svc@microsoft.com"
-          git config user.name "Graphitation Service Account"
-        displayName: Configure git for release
-      - script: yarn release -y -n $(ossNpmToken) --access public
-        displayName: Release
-        env:
-          NPM_AUTHTOKEN: $(ossGithubPAT)
+
+  ## TODO: only enable the following when a secure agent pool has been selected
+  # - job: Release
+  #   variables:
+  #     - group: oss-secrets
+  #   dependsOn: Compliance
+  #   pool: "1ES-Hosted-Ubuntu"
+  #   steps:
+  #     - script: yarn
+  #     - script: |
+  #         yarn ci
+  #       displayName: build and test [test]
+  #     - script: |
+  #         git config user.email "gql-svc@microsoft.com"
+  #         git config user.name "Graphitation Service Account"
+  #       displayName: Configure git for release
+  #     - script: yarn release -y -n $(ossNpmToken) --access public
+  #       displayName: Release
+  #       env:
+  #         NPM_AUTHTOKEN: $(ossGithubPAT)
