--- a/.azure-devops/templates/compliance-job.yml
+++ b/.azure-devops/templates/compliance-job.yml
@@ -5,7 +5,7 @@ jobs:
   - job: compliance
     displayName: Compliance checks
     pool:
-      name: 1ES-Teams-Win2016-TSW
+      name: 1ES-Teams-Win2019-Security
     steps:
       - task: UseDotNet@2
         condition: succeededOrFailed()
