--- a/.azure-devops/templates/compliance-job.yml
+++ b/.azure-devops/templates/compliance-job.yml
@@ -45,7 +45,7 @@ jobs:
           AssetNumber: "$(Build.BuildId)"
           IsShipped: false
           DropsToRetain: "CodeAnalysisLogs"
-        condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+        condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
 
       - task: securedevelopmentteam.vss-secure-development-tools.build-task-postanalysis.PostAnalysis@2
         displayName: "🧭 Guardian Break"
