--- a/.azure-devops/templates/compliance-job.yml
+++ b/.azure-devops/templates/compliance-job.yml
@@ -1,6 +1,11 @@
 # These steps have to run on a windows machine,
 # and therefore unfortunately can't be integrated in the regular steps
 
+parameters:
+  - name: serviceTreeID
+    type: string
+    default: "PLEASE USE YOUR SERVICE TREE ID FOR THE REPO"
+
 jobs:
   - job: compliance
     displayName: Compliance checks
@@ -18,7 +23,7 @@ jobs:
         displayName: "ServiceTree Integration"
         inputs:
           ServiceTreeGateway: "ServiceTree Gateway"
-          Service: 6F8CD842-E117-412F-BAE4-56A3B6166594
+          Service: ${{ parameters.serviceTreeID }}
           BuildOutputUsage: production
 
       - task: securedevelopmentteam.vss-secure-development-tools.build-task-credscan.CredScan@3
