persist git extra header credentials for publishing purposes

--- a/.azure-devops/graphitation-release.yml
+++ b/.azure-devops/graphitation-release.yml
@@ -29,6 +29,8 @@ jobs:
       - template: ./steps/service-tree.yml
         parameters:
           serviceTreeID: $(serviceTreeID)
+      - checkout: self
+        persistCredentials: true
       - script: yarn
         displayName: yarn
       - script: |
