[GRAPHQL_ESLINT_RULES] added filename naming conventions check

--- a/packages/graphql-eslint-rules/package.json
+++ b/packages/graphql-eslint-rules/package.json
@@ -19,13 +19,16 @@
     "@graphql-eslint/eslint-plugin": "^3.7.0",
     "@types/jest": "^26.0.22",
     "@types/lodash.camelcase": "^4.3.6",
+    "@types/lodash.kebabcase": "^4.1.6",
     "@typescript-eslint/utils": "^5.10.1",
     "graphql": "^15.0.0",
     "lodash.camelcase": "^4.3.0",
+    "lodash.kebabcase": "^4.1.1",
     "monorepo-scripts": "*"
   },
   "peerDependencies": {
     "graphql": "^15.0.0",
+    "lodash.kebabcase": "^4.1.1",
     "lodash.camelcase": "^4.3.0"
   },
   "publishConfig": {
