--- a/.azure-devops/graphitation-release.yml
+++ b/.azure-devops/graphitation-release.yml
@@ -29,8 +29,6 @@ jobs:
       - template: ./steps/service-tree.yml
         parameters:
           serviceTreeID: $(serviceTreeID)
-      - checkout: self
-        persistCredentials: true
       - script: yarn
         displayName: yarn
       - script: |
@@ -39,8 +37,7 @@ jobs:
       - script: |
           git config user.email "gql-svc@microsoft.com"
           git config user.name "Graphitation Service Account"
+          git remote set-url origin https://gql-svc:$(ossGithubPAT)@github.com/microsoft/graphitation.git
         displayName: Configure git for release
       - script: yarn release -y -n $(ossNpmToken) --access public
         displayName: Release
-        env:
-          NPM_AUTHTOKEN: $(ossGithubPAT)
