[beachball] Change publish settings for this branch

--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "lint": "lage lint --continue",
     "lage": "lage",
     "ci": "yarn lage build types test lint && yarn checkchange",
-    "beachball": "beachball -b origin/main",
+    "beachball": "beachball -b origin/apollo-fragment-store-watching",
     "change": "yarn beachball change",
     "checkchange": "yarn beachball check",
-    "release": "yarn beachball publish",
+    "release": "yarn beachball publish -t next",
     "postinstall": "patch-package"
   },
   "devDependencies": {
