--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -47,6 +47,9 @@
     }
   },
   "dependencies": {
-    "graphql": "^15.6.1"
+    "@graphql-tools/schema": "^7.1.5",
+    "commander": "^8.3.0",
+    "graphql": "^15.6.1",
+    "typescript": "^4.4.3 <4.5.0"
   }
 }
