--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
   },
   "resolutions": {
     "@types/webpack": "^5.28.0",
-    "graphql": "^15.6.0",
-    "typescript": "^4.6.2"
+    "graphql": "^15.6.0"
   }
 }
