--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -49,6 +49,6 @@
     "@graphql-tools/schema": "^7.1.5",
     "commander": "^8.3.0",
     "graphql": "^15.6.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3 <4.5.0"
   }
 }
