--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -50,6 +50,6 @@
   "dependencies": {
     "commander": "^8.3.0",
     "graphql": "^15.6.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3 <4.5.0"
   }
 }
