--- a/examples/supermassive-todomvc/package.json
+++ b/examples/supermassive-todomvc/package.json
@@ -2,7 +2,7 @@
   "name": "supermassive-todomvc",
   "main": "index.js",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.0.1-0",
   "scripts": {
     "start": "concurrently 'yarn relay --watch' 'yarn serve --progress --color --mode=development'",
     "build": "webpack --mode production --config webpack.config.ts",
@@ -14,7 +14,7 @@
   "dependencies": {
     "@apollo/client": "^3.4.16",
     "@babel/runtime": "^7.12.0",
-    "@graphitation/apollo-react-relay-duct-tape": "^0.7.0",
+    "@graphitation/apollo-react-relay-duct-tape": "^1.0.1-alpha.2",
     "@graphitation/graphql-js-tag": "^0.8.0",
     "@graphitation/supermassive": "^2.0.0",
     "@graphitation/ts-transform-graphql-js-tag": "^0.4.0",
@@ -26,7 +26,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "relay-compiler": "^12.0.0",
-    "relay-compiler-language-graphitation": "^0.8.1",
+    "relay-compiler-language-graphitation": "^1.0.0-alpha.3",
     "ts-loader": "^9.0.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.6.2",
