[example] Don't publish supermassive-todomvc

--- a/examples/supermassive-todomvc/package.json
+++ b/examples/supermassive-todomvc/package.json
@@ -1,6 +1,7 @@
 {
   "name": "supermassive-todomvc",
   "main": "index.js",
+  "private": true,
   "version": "1.0.0",
   "scripts": {
     "start": "concurrently 'yarn relay --watch' 'yarn serve --progress --color --mode=development'",
