--- a/.azure-devops/steps/pierce-ado-npm-mirror-cache.yml
+++ b/.azure-devops/steps/pierce-ado-npm-mirror-cache.yml
@@ -15,7 +15,7 @@ parameters:
 
 steps:
   - bash: |
-      git diff --name-only HEAD HEAD~1 | grep package.json | while read line ; do
+      git diff --name-only HEAD HEAD~1 | grep 'packages/.*/package.json' | while read line ; do
         pkgAndVersion=`cat $line | jq '. | "\(.name)/versions/\(.version)"'`
         curl -Ivu $(adoNpmFeedPat) $(adoNpmFeedBaseUrl)/npm/packages/$pkgAndVersion
       done
