--- a/.azure-devops/steps/pierce-ado-npm-mirror-cache.yml
+++ b/.azure-devops/steps/pierce-ado-npm-mirror-cache.yml
@@ -15,8 +15,8 @@ parameters:
 
 steps:
   - bash: |
-      git diff --name-only HEAD HEAD~1 | grep package.json | while read line ; do
-        pkgAndVersion=`cat $line | jq '. | "\(.name)/versions/\(.version)"'`
-        curl -Ivu $(adoNpmFeedPat) $(adoNpmFeedBaseUrl)/npm/packages/$pkgAndVersion
+      git diff --name-only HEAD HEAD~1 | grep 'packages/.*/package.json' | while read line ; do
+        pkgAndVersion=`cat $line | jq -r '. | "\(.name)/versions/\(.version)"'`
+        curl -Ivu $(adoNpmFeedPat) $(adoNpmFeedBaseUrl)/npm/packages/$pkgAndVersion || true
       done
     displayName: "Pierce ADO NPM feed cache"
