--- a/.azure-devops/steps/pierce-ado-npm-mirror-cache.yml
+++ b/.azure-devops/steps/pierce-ado-npm-mirror-cache.yml
@@ -17,6 +17,6 @@ steps:
   - bash: |
       git diff --name-only HEAD HEAD~1 | grep 'packages/.*/package.json' | while read line ; do
         pkgAndVersion=`cat $line | jq -r '. | "\(.name)/versions/\(.version)"'`
-        curl -Ivu $(adoNpmFeedPat) $(adoNpmFeedBaseUrl)/npm/packages/$pkgAndVersion/content || true
+        curl -Iv -w "%{http_code}" -u $(adoNpmFeedPat) $(adoNpmFeedBaseUrl)/npm/packages/$pkgAndVersion/content || true
       done
     displayName: "Pierce ADO NPM feed cache"
