--- a/.azure-devops/steps/pierce-ado-npm-mirror-cache.yml
+++ b/.azure-devops/steps/pierce-ado-npm-mirror-cache.yml
@@ -17,9 +17,9 @@ parameters:
 steps:
   - bash: |
       git diff --name-only HEAD HEAD~1 | grep 'packages/.*/package.json' | while read pkgFilename ; do
-        pkgName = `cat $pkgFilename | jq -r '.name'`
-        pkgVersion = `cat $pkgFilename | jq -r '.version'`
-        pkgBasename=`echo $pkgAndVersion | cut -d "/" -f 2`
+        pkgName=`cat $pkgFilename | jq -r '.name'`
+        pkgVersion=`cat $pkgFilename | jq -r '.version'`
+        pkgBasename=`echo $pkgName | cut -d "/" -f 2`
         curl -Ivu $(adoNpmFeedPat) $(adoOrgBaseUrl)/_apis/packaging/feeds/$(adoNpmFeedName)/npm/packages/$pkgName/versions/$pkgVersion/content || true
         curl -Ivu $(adoNpmFeedPat) $(adoOrgBaseUrl)/_packaging/$(adoNpmFeedName)/npm/registry/$pkgName/-/$pkgBasename-$pkgVersion.tgz || true
       done
