--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "private": true,
   "workspaces": {
     "packages": [
+      "examples/*",
       "packages/*",
-      "scripts"
+      "scripts",
+      "website"
     ]
   },
   "scripts": {
