[package] Revert moving all deps to root and add resolutions everywhere

--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "private": true,
   "workspaces": {
     "packages": [
-      "examples/*",
       "packages/*",
-      "scripts",
-      "website"
+      "scripts"
     ]
   },
   "scripts": {
