--- a/website/package.json
+++ b/website/package.json
@@ -28,6 +28,13 @@
     "@tsconfig/docusaurus": "^1.0.4",
     "typescript": "^4.5.2"
   },
+  "resolutions": {
+    "glob-parent": "^6.0.2",
+    "minimist": "^1.2.6",
+    "node-fetch": "^2.6.7",
+    "node-forge": "^1.3.1",
+    "trim": "^1.0.1"
+  },
   "browserslist": {
     "production": [
       ">0.5%",
