--- a/packages/apollo-react-relay-duct-tape/package.json
+++ b/packages/apollo-react-relay-duct-tape/package.json
@@ -30,18 +30,19 @@
     "react": "^17.0.2",
     "relay-compiler": "^11.0.2",
     "relay-compiler-language-graphitation": "^1.0.0-alpha.3",
-    "ts-expect": "^1.3.0"
+    "ts-expect": "^1.3.0",
+    "typescript": "^4.5.0"
   },
   "peerDependencies": {
     "@apollo/client": "^3.3.0",
     "graphql": "^15.0.0",
     "react": "^17.0.2",
-    "relay-compiler-language-graphitation": "^1.0.0-alpha.3"
+    "relay-compiler-language-graphitation": "^1.0.0-alpha.3",
+    "typescript": "^4.5.0"
   },
   "dependencies": {
     "invariant": "^2.2.4",
-    "lodash": "^4.17.15",
-    "typescript": "^4.5.0"
+    "lodash": "^4.17.15"
   },
   "sideEffects": false,
   "access": "public",
