--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "beachball": "beachball -b origin/main",
     "change": "yarn beachball change",
     "checkchange": "yarn beachball check",
-    "release": "yarn beachball publish"
+    "release": "yarn beachball publish",
+    "postinstall": "patch-package"
   },
   "devDependencies": {
     "beachball": "^2.20.0",
