--- a/packages/graphql-devtools/package.json
+++ b/packages/graphql-devtools/package.json
@@ -20,14 +20,13 @@
     "@apollo/client": "^3.4.11",
     "@fluentui/react-components": "9.0.0-rc.9",
     "@fluentui/react-tabster": "^9.0.0-rc.7",
-    "@types/history": "^2.0.45",
     "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.isequal": "^4.5.5",
     "@types/moment": "^2.13.0",
-    "@types/react": "17.0.3",
-    "@types/react-dom": "17.0.3",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "@types/react-router": "^5.1.18",
-    "@types/react-router-dom": "^4.2.3",
+    "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^8.3.4",
     "eslint-plugin-react": "^7.25.2",
     "graphiql": "^1.5.1",
@@ -37,9 +36,9 @@
     "moment": "^2.29.3",
     "object-sizeof": "^1.6.1",
     "prettier": "^2.6.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^4.2.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.3",
     "rempl": "^1.0.0-alpha.21",
     "uuid": "^8.3.2"
   },
