--- a/packages/rempl-apollo-devtools/package.json
+++ b/packages/rempl-apollo-devtools/package.json
@@ -29,7 +29,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^8.3.4",
     "eslint-plugin-react": "^7.25.2",
-    "graphiql": "^1.5.1",
+    "graphiql": "1.8.7",
     "hotkeys-js": "^3.8.7",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
