--- a/packages/graphql-codegen-typescript-typemap-plugin/tsconfig.json
+++ b/packages/graphql-codegen-typescript-typemap-plugin/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "module": "commonjs",
     "composite": true,
     "tsBuildInfoFile": ".tsbuildinfo",
     "rootDir": "src",
