--- a/packages/degrasse/package.json
+++ b/packages/degrasse/package.json
@@ -16,17 +16,25 @@
     "types": "monorepo-scripts types",
     "just": "monorepo-scripts"
   },
+  "dependencies": {
+    "graphiql": "^1.9.9",
+    "graphql": "^15.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
+    "@types/copy-webpack-plugin": "^10.1.0",
     "@types/jest": "^26.0.22",
     "@types/react": "^18.0.14",
-    "html-webpack-plugin": "^5.5.0",
+    "@types/react-dom": "^18.0.5",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-dev-server": "^4.7.2",
+    "copy-webpack-plugin": "^11.0.0",
     "monorepo-scripts": "*",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "ts-loader": "^9.3.0",
-    "webpack": "^5.0.0",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.1.14"
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.2.1"
   },
   "sideEffects": false,
   "access": "public",
