--- a/packages/relay-apollo-duct-tape/package.json
+++ b/packages/relay-apollo-duct-tape/package.json
@@ -9,6 +9,7 @@
     "directory": "packages/relay-apollo-duct-tape"
   },
   "scripts": {
+    "relay": "relay-compiler",
     "build": "monorepo-scripts build",
     "lint": "monorepo-scripts lint",
     "test": "monorepo-scripts test",
@@ -16,13 +17,15 @@
     "just": "monorepo-scripts"
   },
   "dependencies": {
-    "relay-runtime": "^14.0.0"
+    "relay-runtime": "^14.0.0",
+    "react-relay": "^14.0.0"
   },
   "devDependencies": {
     "@apollo/client": "^3.6.9",
     "@graphitation/graphql-js-tag": "^0.9.0",
     "@types/jest": "^26.0.22",
-    "@types/relay-runtime": "^13.0.3",
+    "@types/relay-runtime": "^14.1.2",
+    "@types/react-relay": "^14.1.1",
     "monorepo-scripts": "*",
     "relay-compiler": "^14.0.0"
   },
