--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@graphitation/supermassive",
   "license": "MIT",
-  "version": "0.8.5",
+  "version": "0.8.6",
   "bin": {
     "supermassive": "./bin/supermassive.js"
   },
@@ -36,6 +36,12 @@
   },
   "sideEffects": false,
   "access": "public",
+  "exports": {
+    "./extractors": {
+      "import": "./src/extractors/index.ts",
+      "types": "./src/extractors/index.ts"
+    }
+  },
   "publishConfig": {
     "main": "./lib/index",
     "types": "./lib/index.d.ts",
@@ -44,6 +50,11 @@
       ".": {
         "import": "./lib/index.mjs",
         "require": "./lib/index.js"
+      },
+      "./lib/extractors": {
+        "import": "./lib/extractors/index.mjs",
+        "require": "./lib/extractors/index.js",
+        "types": "./lib/extractors/index.d.ts"
       }
     }
   },
