--- a/packages/graphql-codegen-supermassive-schema-extraction-plugin/package.json
+++ b/packages/graphql-codegen-supermassive-schema-extraction-plugin/package.json
@@ -23,7 +23,7 @@
   "peerDependencies": {
     "@graphql-codegen/plugin-helpers": ">= 1.18.0 < 2",
     "typescript": "^4.4.3 <4.5.0",
-    "@graphitation/supermassive": ">= ^0.8.5"
+    "@graphitation/supermassive": "^0.8.5"
   },
   "dependencies": {
     "typescript": "^4.4.3 <4.5.0"
