--- a/packages/relay-apollo-duct-tape/package.json
+++ b/packages/relay-apollo-duct-tape/package.json
@@ -18,7 +18,8 @@
   },
   "dependencies": {
     "relay-runtime": "^14.0.0",
-    "react-relay": "^14.0.0"
+    "react-relay": "^14.0.0",
+    "@babel/runtime": "^7.0.0"
   },
   "devDependencies": {
     "@apollo/client": "^3.6.9",
@@ -26,6 +27,7 @@
     "@types/jest": "^26.0.22",
     "@types/relay-runtime": "^14.1.2",
     "@types/react-relay": "^14.1.1",
+    "@types/relay-compiler": "^8.0.4",
     "monorepo-scripts": "*",
     "relay-compiler": "^14.0.0"
   },
