--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prettier": "^2.2.1"
   },
   "resolutions": {
+    "@types/relay-runtime": "^14.1.2",
     "cross-fetch": "^3.1.5",
     "glob-parent": "^6.0.2",
     "minimist": "^1.2.6",
