--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "resolutions": {
     "@types/relay-runtime": "^14.1.2",
+    "relay-runtime": "^14.0.0",
     "cross-fetch": "^3.1.5",
     "glob-parent": "^6.0.2",
     "minimist": "^1.2.6",
