--- a/packages/relay-apollo-duct-tape/tsconfig.json
+++ b/packages/relay-apollo-duct-tape/tsconfig.json
@@ -4,7 +4,8 @@
     "composite": true,
     "tsBuildInfoFile": ".tsbuildinfo",
     "rootDir": "src",
-    "outDir": "lib"
+    "outDir": "lib",
+    "lib": ["esnext"]
   },
   "include": ["src"],
   "references": []
