--- a/packages/relay-apollo-duct-tape/tsconfig.json
+++ b/packages/relay-apollo-duct-tape/tsconfig.json
@@ -5,7 +5,7 @@
     "tsBuildInfoFile": ".tsbuildinfo",
     "rootDir": "src",
     "outDir": "lib",
-    "lib": ["esnext"]
+    "lib": ["esnext", "dom"]
   },
   "include": ["src"],
   "references": []
