More TS faffing

--- a/packages/graphql-codegen-typescript-typemap-plugin/tsconfig.json
+++ b/packages/graphql-codegen-typescript-typemap-plugin/tsconfig.json
@@ -5,7 +5,8 @@
     "composite": true,
     "tsBuildInfoFile": ".tsbuildinfo",
     "rootDir": "src",
-    "outDir": "lib"
+    "outDir": "lib",
+    "lib": ["dom", "ES2019"]
   },
   "include": ["src"],
   "references": []
