--- a/packages/graphql-codegen-relay-ir-plugin/package.json
+++ b/packages/graphql-codegen-relay-ir-plugin/package.json
@@ -2,7 +2,7 @@
   "name": "@graphitation/graphql-codegen-relay-ir-plugin",
   "license": "MIT",
   "version": "1.1.0",
-  "main": "./src/index.ts",
+  "main": "./lib/index",
   "repository": {
     "type": "git",
     "url": "https://github.com/microsoft/graphitation.git",
