[relay-duct-tape] Add mutation integratio tests

--- a/packages/relay-apollo-duct-tape/tsconfig.json
+++ b/packages/relay-apollo-duct-tape/tsconfig.json
@@ -5,7 +5,8 @@
     "tsBuildInfoFile": ".tsbuildinfo",
     "rootDir": "src",
     "outDir": "lib",
-    "lib": ["esnext", "dom"]
+    "lib": ["esnext", "dom"],
+    "jsx": "react"
   },
   "include": ["src"],
   "references": []
