--- a/packages/rempl-apollo-devtools/package.json
+++ b/packages/rempl-apollo-devtools/package.json
@@ -9,7 +9,7 @@
     "directory": "packages/apollo-devtools"
   },
   "scripts": {
-    "build": "node scripts/build.js",
+    "build": "node scripts/build-single-bundle && node scripts/build-separated-bundles",
     "watch": "watch 'node scripts/build.js'",
     "lint": "monorepo-scripts lint",
     "test": "monorepo-scripts test",
@@ -17,7 +17,7 @@
     "just": "monorepo-scripts"
   },
   "devDependencies": {
-    "@apollo/client": "^3.4.11",
+    "@apollo/client": "^3.6.5",
     "@fluentui/react-components": "9.0.0-rc.9",
     "@fluentui/react-tabster": "^9.0.0-rc.7",
     "@types/lodash.debounce": "^4.0.6",
@@ -29,7 +29,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^8.3.4",
     "eslint-plugin-react": "^7.25.2",
-    "graphiql": "1.8.7",
+    "graphiql": "^2.0.8",
     "hotkeys-js": "^3.8.7",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
