--- a/packages/supermassive-extractors/package.json
+++ b/packages/supermassive-extractors/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "build": "monorepo-scripts build",
     "lint": "monorepo-scripts lint",
-    "test": "monorepo-scripts test",
+    "test": "echo \"no tests\"",
     "types": "monorepo-scripts types",
     "just": "monorepo-scripts"
   },
