--- a/packages/supermassive-extractors/tsconfig.json
+++ b/packages/supermassive-extractors/tsconfig.json
@@ -8,10 +8,5 @@
     "jsx": "react"
   },
   "include": ["src"],
-  "references": [],
-  "ts-node": {
-    "compilerOptions": {
-      "module": "CommonJS"
-    }
-  }
+  "references": []
 }
